--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <resource.delimiter>${}</resource.delimiter>
+        <filter3.prop1>property defined in pom.xml</filter3.prop1>
     </properties>
 
     <dependencies>
