--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-debug=true
+## resource.delimiter property configured to be ${}
 myprops.prop1=${filter1.prop1}
 myprops.prop2=${filter2.prop1}
 myprops.prop3=${filter3.prop1}
+
+## default delimiter:
+## comment-out resource.delimiter property in pom.xml
+## to use this syntax
+#myprops.prop1=@filter1.prop1@
+#myprops.prop2=@filter2.prop1@
+#myprops.prop3=@filter3.prop1@
