one more property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,12 @@ myprops.prop2=${filter2.prop1}
 myprops.prop3=${pom.prop1}
 
 
+
+myprops.prop4=${filter2.prop2}
 ## default delimiter:
 ## comment-out resource.delimiter property in pom.xml
 ## to use this syntax
 #myprops.prop1=@filter1.prop1@
 #myprops.prop2=@filter2.prop1@
 #myprops.prop3=@filter3.prop1@
+#myprops.prop4=@filter2.prop2@
