--- a/src/main/resources/filter2.properties
+++ b/src/main/resources/filter2.properties
@@ -1,1 +1,2 @@
 filter2.prop1 = property defined in resources/filter2.properties
+filter2.prop2 = another property from resources/filter2.properties
