rename property defined in pom.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 ## resource.delimiter property configured to be ${}
 myprops.prop1=${filter1.prop1}
 myprops.prop2=${filter2.prop1}
-myprops.prop3=${filter3.prop1}
+myprops.prop3=${pom.prop1}
+
 
 ## default delimiter:
 ## comment-out resource.delimiter property in pom.xml
