--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <locale>fr</locale>
         <java.version>1.8</java.version>
         <resource.delimiter>${}</resource.delimiter>
         <pom.prop1>property defined in pom.xml</pom.prop1>
@@ -53,7 +54,8 @@
         </plugins>
         <filters>
             <filter>src/main/filters/filter1.properties</filter>
-            <filter>src/main/resources/filter2.properties</filter>
+            <filter>src/main/resources/filter2_${locale}.properties</filter>
+
         </filters>
         <resources>
             <resource>
