add properties of different types: int, boolean, String[], enum

--- a/src/main/filters/filter1.properties
+++ b/src/main/filters/filter1.properties
@@ -1,1 +1,3 @@
-filter1.prop1 = property defined in filters/filter1.properties
+filter1.stringprop1 = property defined in filters/filter1.properties
+filter1.enumprop1 = RED
+filter1.boolprop1 = true
