--- a/src/main/resources/filter2.properties
+++ b/src/main/resources/filter2.properties
@@ -1,2 +1,4 @@
-filter2.prop1 = property defined in resources/filter2.properties
-filter2.prop2 = another property from resources/filter2.properties
+filter2.stringprop1 = property defined in resources/filter2.properties
+filter2.stringprop2 = another property from resources/filter2.properties
+filter2.stringprop3 = foo
+filter2.intprop1 = 100
