--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,19 @@
 ## resource.delimiter property configured to be ${}
-myprops.prop1=${filter1.prop1}
-myprops.prop2=${filter2.prop1}
-myprops.prop3=${pom.prop1}
-
-
-
-myprops.prop4=${filter2.prop2}
+#myprops.prop1=${filter1.stringprop1}
+#myprops.prop2=${filter2.stringprop1}
+#myprops.prop3=${filter3.stringprop1}
+#myprops.prop4=${filter2.stringprop2}
+#myprops.prop5= ${filter2.intprop1}
+#myprops.prop6= ${filter1.boolprop1}
 ## default delimiter:
 ## comment-out resource.delimiter property in pom.xml
 ## to use this syntax
-#myprops.prop1=@filter1.prop1@
-#myprops.prop2=@filter2.prop1@
-#myprops.prop3=@filter3.prop1@
-#myprops.prop4=@filter2.prop2@
+myprops.prop1=@filter1.stringprop1@
+myprops.prop2=@filter2.stringprop1@
+myprops.prop3=@filter3.stringprop1@
+myprops.prop4=@filter2.stringprop2@,@filter2.stringprop3@
+myprops.prop5=@filter2.intprop1@
+myprops.prop6=@filter1.boolprop1@
+myprops.prop7=@filter1.enumprop1@
+
+
