--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,12 @@ myprops.prop5=@filter2.intprop1@
 myprops.prop6=@filter1.boolprop1@
 myprops.prop7=@filter1.enumprop1@
 
+## delimiter is set to @{*}:
 
+#myprops.prop1=@{filter1.stringprop1}
+#myprops.prop2=@{filter2.stringprop1}
+#myprops.prop3=@{filter3.stringprop1}
+#myprops.prop4=@{filter2.stringprop2},@{filter2.stringprop3}
+#myprops.prop5=@{filter2.intprop1}
+#myprops.prop6=@{filter1.boolprop1}
+#myprops.prop7=@{filter1.longprop1}
