rename property defined in pom.xml to 'pom.strprop1'

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## resource.delimiter property configured to be ${}
 #myprops.prop1=${filter1.stringprop1}
 #myprops.prop2=${filter2.stringprop1}
-#myprops.prop3=${filter3.stringprop1}
+#myprops.prop3=${pom.stringprop1}
 #myprops.prop4=${filter2.stringprop2}
 #myprops.prop5= ${filter2.intprop1}
 #myprops.prop6= ${filter1.boolprop1}
@@ -10,7 +10,7 @@
 ## to use this syntax
 myprops.prop1=@filter1.stringprop1@
 myprops.prop2=@filter2.stringprop1@
-myprops.prop3=@filter3.stringprop1@
+myprops.prop3=@pom.stringprop1@
 myprops.prop4=@filter2.stringprop2@,@filter2.stringprop3@
 myprops.prop5=@filter2.intprop1@
 myprops.prop6=@filter1.boolprop1@
@@ -20,7 +20,7 @@ myprops.prop7=@filter1.enumprop1@
 
 #myprops.prop1=@{filter1.stringprop1}
 #myprops.prop2=@{filter2.stringprop1}
-#myprops.prop3=@{filter3.stringprop1}
+#myprops.prop3=@{pom.stringprop1}
 #myprops.prop4=@{filter2.stringprop2},@{filter2.stringprop3}
 #myprops.prop5=@{filter2.intprop1}
 #myprops.prop6=@{filter1.boolprop1}
@@ -29,7 +29,7 @@ myprops.prop7=@filter1.enumprop1@
 ## delimiter is set to '$$' - just to test inspection, can't make it work with maven
 #myprops.prop1=$$filter1.stringprop1$$
 #myprops.prop2=$$filter2.stringprop1$$
-#myprops.prop3=$$filter3.stringprop1$$
+#myprops.prop3=$$pom.stringprop1$$
 #myprops.prop4=$$filter2.stringprop2$$,$$filter2.stringprop3$$
 #myprops.prop5=$$filter2.intprop1$$
 #myprops.prop6=$$filter1.boolprop1$$
