--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <java.version>1.8</java.version>
         <!--<resource.delimiter>@{*}</resource.delimiter>-->
         <!--<resource.delimiter>${}</resource.delimiter>-->
-        <filter3.stringprop1>property defined in pom.xml</filter3.stringprop1>
+        <pom.stringprop1>property defined in pom.xml</pom.stringprop1>
     </properties>
 
     <dependencies>
