--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ myprops.prop7=@filter1.enumprop1@
 #myprops.prop4=@{filter2.stringprop2},@{filter2.stringprop3}
 #myprops.prop5=@{filter2.intprop1}
 #myprops.prop6=@{filter1.boolprop1}
-#myprops.prop7=@{filter1.longprop1}
+#myprops.prop7=@{filter1.enumprop1}
 
 ## delimiter is set to '$$' - just to test inspection, can't make it work with maven
 #myprops.prop1=$$filter1.stringprop1$$
