update SB version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@
 ## default delimiter:
 ## comment-out resource.delimiter property in pom.xml
 ## to use this syntax
+spring.application.name=@artifactId@
+myprops.version=@parent.version@
 myprops.prop1=@filter1.stringprop1@
 myprops.prop2=@filter2.stringprop1@
 myprops.prop3=@pom.stringprop1@
